{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 277,
  "lineage": "fa3a0bec-730c-0184-5ca2-0509d80b406c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e68bcebdf5f070a",
            "association_id": "eipassoc-07d9d5c63dfb6577f",
            "domain": "vpc",
            "id": "eipalloc-00e68bcebdf5f070a",
            "instance": "i-0e5d79989d7b17881",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-064f3022f677a3575",
            "private_dns": "ip-10-0-1-84.eu-west-3.compute.internal",
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-15-237-76-235.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.76.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-backend-eip",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-backend-eip",
              "Project": "DevOps-Project"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_internet_gateway.igw",
            "aws_key_pair.generated_key",
            "aws_security_group.backend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0762356ae84a7d1ad",
            "association_id": "eipassoc-04893b54abe5501ce",
            "domain": "vpc",
            "id": "eipalloc-0762356ae84a7d1ad",
            "instance": "i-0ea28bc36a734426c",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-08f0683b97a2ef395",
            "private_dns": "ip-10-0-1-244.eu-west-3.compute.internal",
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-35-180-223-106.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.223.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-database-eip",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-database-eip",
              "Project": "DevOps-Project"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.database",
            "aws_internet_gateway.igw",
            "aws_key_pair.generated_key",
            "aws_security_group.database",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0681e058ad7807098",
            "association_id": "eipassoc-034c491e38db2367f",
            "domain": "vpc",
            "id": "eipalloc-0681e058ad7807098",
            "instance": "i-06fc0ac3395d50f49",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0471b113af6a6dca3",
            "private_dns": "ip-10-0-1-59.eu-west-3.compute.internal",
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-35-180-185-127.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.185.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-frontend-eip",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-frontend-eip",
              "Project": "DevOps-Project"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_internet_gateway.igw",
            "aws_key_pair.generated_key",
            "aws_security_group.frontend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091119e7f2d3f9482",
            "arn": "arn:aws:ec2:eu-west-3:537467926748:instance/i-0e5d79989d7b17881",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5d79989d7b17881",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064f3022f677a3575",
            "private_dns": "ip-10-0-1-84.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-13-38-77-120.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.77.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017a1544909d568f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01525c56180f52ed3",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-backend",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-backend",
              "Project": "DevOps-Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1868962b3c422ba"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.generated_key",
            "aws_security_group.backend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091119e7f2d3f9482",
            "arn": "arn:aws:ec2:eu-west-3:537467926748:instance/i-0ea28bc36a734426c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea28bc36a734426c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f0683b97a2ef395",
            "private_dns": "ip-10-0-1-244.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-51-44-179-64.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.44.179.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079a7116d4eb2b643",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01525c56180f52ed3",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-database",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-database",
              "Project": "DevOps-Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af7b366bd0abf30e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.generated_key",
            "aws_security_group.database",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091119e7f2d3f9482",
            "arn": "arn:aws:ec2:eu-west-3:537467926748:instance/i-06fc0ac3395d50f49",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fc0ac3395d50f49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0471b113af6a6dca3",
            "private_dns": "ip-10-0-1-59.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-15-236-239-151.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.239.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093640d6a838a9060",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01525c56180f52ed3",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-frontend",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-frontend",
              "Project": "DevOps-Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0882da11bdd639624"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.generated_key",
            "aws_security_group.frontend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:internet-gateway/igw-0fcef8805e4c86486",
            "id": "igw-0fcef8805e4c86486",
            "owner_id": "537467926748",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-igw",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-igw",
              "Project": "DevOps-Project"
            },
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:network-acl/acl-0539d1b8348405093",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0539d1b8348405093",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 125,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "537467926748",
            "subnet_ids": [
              "subnet-01525c56180f52ed3"
            ],
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-public-nacl",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-public-nacl",
              "Project": "DevOps-Project"
            },
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:route-table/rtb-0d884ab9d74cd309f",
            "id": "rtb-0d884ab9d74cd309f",
            "owner_id": "537467926748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcef8805e4c86486",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-public-rt",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-public-rt",
              "Project": "DevOps-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eca3959bd17eac0",
            "route_table_id": "rtb-0d884ab9d74cd309f",
            "subnet_id": "subnet-01525c56180f52ed3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:security-group/sg-0a1868962b3c422ba",
            "description": "Security group for backend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1868962b3c422ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "537467926748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-backend-sg",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-backend-sg",
              "Project": "DevOps-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:security-group/sg-0af7b366bd0abf30e",
            "description": "Security group for database server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af7b366bd0abf30e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "537467926748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-database-sg",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-database-sg",
              "Project": "DevOps-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:security-group/sg-0882da11bdd639624",
            "description": "Security group for frontend web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0882da11bdd639624",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "537467926748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-frontend-sg",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-frontend-sg",
              "Project": "DevOps-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:subnet/subnet-01525c56180f52ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01525c56180f52ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537467926748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-public-subnet",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-public-subnet",
              "Project": "DevOps-Project"
            },
            "vpc_id": "vpc-0275e78cb8777bfd8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:537467926748:vpc/vpc-0275e78cb8777bfd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0402870c2ce3a598a",
            "default_route_table_id": "rtb-0774e2f7042444672",
            "default_security_group_id": "sg-08ac6b972971c0664",
            "dhcp_options_id": "dopt-0373f4bc9e6cdbdbb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0275e78cb8777bfd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0774e2f7042444672",
            "owner_id": "537467926748",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-vpc",
              "Project": "DevOps-Project"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "devops-project-vpc",
              "Project": "DevOps-Project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}